--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -10,7 +10,8 @@
     "function-url-quotes": "always",
     "font-family-name-quotes": "always-where-recommended",
     "font-weight-notation": "numeric",
-    "media-feature-range-notation": "context"
+    "media-feature-range-notation": "context",
+    "selector-class-pattern": null
   },
   "ignoreFiles": ["node_modules/**/*", "dist/**/*", "build/**/*", "*.min.css"]
 }
