--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -12,7 +12,8 @@
     "font-weight-notation": "numeric",
     "media-feature-range-notation": "context",
     "selector-class-pattern": null,
-    "no-descending-specificity": null
+    "no-descending-specificity": null,
+    "no-duplicate-selectors": null
   },
   "ignoreFiles": ["node_modules/**/*", "dist/**/*", "build/**/*", "*.min.css"]
 }
