--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "format:check": "prettier --check .",
     "stylelint": "stylelint \"**/*.{css,scss,sass}\"",
     "stylelint:fix": "stylelint \"**/*.{css,scss,sass}\" --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "add-404-handler": "node scripts/add-404-handler.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
